Fix z-index of img at background

--- a/src/static/pycontw-2019/styles/_index-partners.scss
+++ b/src/static/pycontw-2019/styles/_index-partners.scss
@@ -100,6 +100,7 @@
 		bottom: 0;
 		left: 0;
 		transform: rotate(45deg);
+		z-index: -10;
 	}
 }
 
